[gd_scene load_steps=6 format=3 uid="uid://d26acnrtv8nu7"]

[ext_resource type="Script" uid="uid://cl481xfr2k7gu" path="res://player_character/player_character.gd" id="1_5up26"]
[ext_resource type="Texture2D" uid="uid://c1eo18nl8beig" path="res://player_character/player_character.png" id="2_1ty04"]
[ext_resource type="Theme" uid="uid://ithwym1y6fyq" path="res://hud_theme.tres" id="3_5l2xy"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_5up26"]
friction = 0.2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5up26"]
radius = 24.0
height = 128.0

[node name="PlayerCharacter" type="RigidBody2D" groups=["Player Character"]]
physics_material_override = SubResource("PhysicsMaterial_5up26")
lock_rotation = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_5up26")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_1ty04")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5up26")

[node name="JumpPenaltyTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="JumpPenaltyProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -25.0
offset_right = 20.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme = ExtResource("3_5l2xy")
value = 50.0
fill_mode = 3
show_percentage = false

[connection signal="timeout" from="JumpPenaltyTimer" to="." method="_on_jump_penalty_timer_timeout"]
